# project-network-synapse-quattro

./: .coderabbit.yaml  .env.example  .gitleaks.toml  .gitmodules  .infrahub.yml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup-github-project.sh
.claude/: settings.json
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: pyproject.toml
changelog/: 107.added.md  108.changed.md  110.fixed.md  112.added.md  113.changed.md  114.changed.md  117.fixed.md  120.fixed.md  123.fixed.md  125.fixed.md  126.changed.md  129.changed.md  133.added.md  135.fixed.md  137.added.md  141.added.md  154.changed.md  155.added.md  157.added.md  161.added.md  164.fixed.md  165.added.md  166.fixed.md  167.fixed.md  169.added.md  170.added.md  171.added.md  178.fixed.md  36.added.md  48.added.md  49.added.md  62.added.md  63.added.md  66.added.md  70.added.md  71.added.md  76.changed.md  78.changed.md  80.added.md  80.fixed.md  (+5 more)
containerlab/: topology.clab.yml
development/: Dockerfile  docker-compose-ci.yml  docker-compose-deps.yml
docs/: install.md  (+10 more)
presentation/: pyproject.toml
presentation/synapse_presentation/: __init__.py  app.py  auth.py  main.py  temporal.py  ui.py
workers/: pyproject.toml
workers/synapse_workers/: metrics.py  triggers.py  worker.py
workers/synapse_workers/activities/: _gnmi_io.py  config_deployment_activities.py  device_backup_activities.py  drift_activities.py  infrahub_activities.py  override_activities.py
workers/synapse_workers/workflows/: drift_remediation_workflow.py  emergency_change_workflow.py  operational_override_workflow.py
(+137 files in other folders)
